baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__02_parser__heterogeneous_collection.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  CLASS_DEF
    KW_CLASS "class"
    WORD "Task"
    GENERIC_PARAM_LIST
      LESS "<"
      GENERIC_PARAM "E"
        WORD "E"
      GREATER ">"
    L_BRACE "{"
    FIELD
      WORD "name"
      COLON ":"
      TYPE_EXPR "string"
        WORD "string"
    FIELD
      WORD "run"
      COLON ":"
      TYPE_EXPR
        L_PAREN "("
        R_PAREN ")"
        ARROW "->"
        TYPE_EXPR "null"
          WORD "null"
        THROWS_CLAUSE
          KW_THROWS "throws"
          TYPE_EXPR "E"
            WORD "E"
    R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "run_tasks"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "tasks"
        COLON ":"
        TYPE_EXPR
          WORD "Task"
          TYPE_ARGS
            LESS "<"
            TYPE_EXPR "string | int"
              WORD "string"
              PIPE "|"
              WORD "int"
            GREATER ">"
          L_BRACKET "["
          R_BRACKET "]"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "null"
      WORD "null"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        FOR_EXPR
          KW_FOR "for"
          L_PAREN "("
          LET_STMT "let task"
            KW_LET "let"
            WORD "task"
          KW_IN "in"
          WORD "tasks"
          R_PAREN ")"
          BLOCK_EXPR
            L_BRACE "{"
            CALL_EXPR
              PATH_EXPR "task.run"
                WORD "task"
                DOT "."
                WORD "run"
              CALL_ARGS "()"
                L_PAREN "("
                R_PAREN ")"
            R_BRACE "}"
        WORD "null"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "run_tasks_alias"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "tasks"
        COLON ":"
        TYPE_EXPR
          WORD "Task"
          TYPE_ARGS
            LESS "<"
            TYPE_EXPR "string | int"
              WORD "string"
              PIPE "|"
              WORD "int"
            GREATER ">"
          L_BRACKET "["
          R_BRACKET "]"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "null"
      WORD "null"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT "let alias = tasks"
          KW_LET "let"
          WORD "alias"
          EQUALS "="
          WORD "tasks"
        FOR_EXPR
          KW_FOR "for"
          L_PAREN "("
          LET_STMT "let task"
            KW_LET "let"
            WORD "task"
          KW_IN "in"
          WORD "alias"
          R_PAREN ")"
          BLOCK_EXPR
            L_BRACE "{"
            CALL_EXPR
              PATH_EXPR "task.run"
                WORD "task"
                DOT "."
                WORD "run"
              CALL_ARGS "()"
                L_PAREN "("
                R_PAREN ")"
            R_BRACE "}"
        WORD "null"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "make_mixed_tasks"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR
      WORD "Task"
      TYPE_ARGS
        LESS "<"
        TYPE_EXPR "string | int"
          WORD "string"
          PIPE "|"
          WORD "int"
        GREATER ">"
      L_BRACKET "["
      R_BRACKET "]"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        ARRAY_LITERAL
          L_BRACKET "["
          OBJECT_LITERAL
            WORD "Task"
            L_BRACE "{"
            OBJECT_FIELD
              WORD "name"
              COLON ":"
              STRING_LITERAL "a"
                QUOTE """
                WORD "a"
                QUOTE """
            COMMA ","
            OBJECT_FIELD
              WORD "run"
              COLON ":"
              LAMBDA_EXPR
                PARAMETER_LIST "()"
                  L_PAREN "("
                  R_PAREN ")"
                ARROW "->"
                TYPE_EXPR "null"
                  WORD "null"
                BLOCK_EXPR
                  L_BRACE "{"
                  THROW_STMT
                    THROW_EXPR
                      KW_THROW "throw"
                      STRING_LITERAL "error"
                        QUOTE """
                        WORD "error"
                        QUOTE """
                  R_BRACE "}"
            R_BRACE "}"
          COMMA ","
          OBJECT_LITERAL
            WORD "Task"
            L_BRACE "{"
            OBJECT_FIELD
              WORD "name"
              COLON ":"
              STRING_LITERAL "b"
                QUOTE """
                WORD "b"
                QUOTE """
            COMMA ","
            OBJECT_FIELD
              WORD "run"
              COLON ":"
              LAMBDA_EXPR
                PARAMETER_LIST "()"
                  L_PAREN "("
                  R_PAREN ")"
                ARROW "->"
                TYPE_EXPR "null"
                  WORD "null"
                BLOCK_EXPR
                  L_BRACE "{"
                  THROW_STMT
                    THROW_EXPR "throw 42"
                      KW_THROW "throw"
                      INTEGER_LITERAL "42"
                  R_BRACE "}"
            R_BRACE "}"
          COMMA ","
          R_BRACKET "]"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "run_local_tasks"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "null"
      WORD "null"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "tasks"
          EQUALS "="
          CALL_EXPR
            WORD "make_mixed_tasks"
            CALL_ARGS "()"
              L_PAREN "("
              R_PAREN ")"
        FOR_EXPR
          KW_FOR "for"
          L_PAREN "("
          LET_STMT "let task"
            KW_LET "let"
            WORD "task"
          KW_IN "in"
          WORD "tasks"
          R_PAREN ")"
          BLOCK_EXPR
            L_BRACE "{"
            CALL_EXPR
              PATH_EXPR "task.run"
                WORD "task"
                DOT "."
                WORD "run"
              CALL_ARGS "()"
                L_PAREN "("
                R_PAREN ")"
            R_BRACE "}"
        WORD "null"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "run_inline_tasks"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "null"
      WORD "null"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "tasks"
          EQUALS "="
          ARRAY_LITERAL
            L_BRACKET "["
            OBJECT_LITERAL
              WORD "Task"
              L_BRACE "{"
              OBJECT_FIELD
                WORD "name"
                COLON ":"
                STRING_LITERAL "a"
                  QUOTE """
                  WORD "a"
                  QUOTE """
              COMMA ","
              OBJECT_FIELD
                WORD "run"
                COLON ":"
                LAMBDA_EXPR
                  PARAMETER_LIST "()"
                    L_PAREN "("
                    R_PAREN ")"
                  ARROW "->"
                  TYPE_EXPR "null"
                    WORD "null"
                  BLOCK_EXPR
                    L_BRACE "{"
                    THROW_STMT
                      THROW_EXPR
                        KW_THROW "throw"
                        STRING_LITERAL "error"
                          QUOTE """
                          WORD "error"
                          QUOTE """
                    R_BRACE "}"
              R_BRACE "}"
            COMMA ","
            OBJECT_LITERAL
              WORD "Task"
              L_BRACE "{"
              OBJECT_FIELD
                WORD "name"
                COLON ":"
                STRING_LITERAL "b"
                  QUOTE """
                  WORD "b"
                  QUOTE """
              COMMA ","
              OBJECT_FIELD
                WORD "run"
                COLON ":"
                LAMBDA_EXPR
                  PARAMETER_LIST "()"
                    L_PAREN "("
                    R_PAREN ")"
                  ARROW "->"
                  TYPE_EXPR "null"
                    WORD "null"
                  BLOCK_EXPR
                    L_BRACE "{"
                    THROW_STMT
                      THROW_EXPR "throw 42"
                        KW_THROW "throw"
                        INTEGER_LITERAL "42"
                    R_BRACE "}"
              R_BRACE "}"
            COMMA ","
            R_BRACKET "]"
        FOR_EXPR
          KW_FOR "for"
          L_PAREN "("
          LET_STMT "let task"
            KW_LET "let"
            WORD "task"
          KW_IN "in"
          WORD "tasks"
          R_PAREN ")"
          BLOCK_EXPR
            L_BRACE "{"
            CALL_EXPR
              PATH_EXPR "task.run"
                WORD "task"
                DOT "."
                WORD "run"
              CALL_ARGS "()"
                L_PAREN "("
                R_PAREN ")"
            R_BRACE "}"
        WORD "null"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_run_mixed_tasks"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "null"
      WORD "null"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "run_tasks"
          CALL_ARGS
            L_PAREN "("
            CALL_EXPR
              WORD "make_mixed_tasks"
              CALL_ARGS "()"
                L_PAREN "("
                R_PAREN ")"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_run_tasks_alias"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "null"
      WORD "null"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "run_tasks_alias"
          CALL_ARGS
            L_PAREN "("
            CALL_EXPR
              WORD "make_mixed_tasks"
              CALL_ARGS "()"
                L_PAREN "("
                R_PAREN ")"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_run_local_tasks"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "null"
      WORD "null"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "run_local_tasks"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_run_inline_tasks"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "null"
      WORD "null"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "run_inline_tasks"
          CALL_ARGS "()"
            L_PAREN "("
            R_PAREN ")"
        R_BRACE "}"

=== ERRORS ===
None
