baml_language/crates/baml_tests/snapshots/function_type_throws/baml_tests__function_type_throws__02_parser__hof_own_throws.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== SYNTAX TREE ===
SOURCE_FILE
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "apply_guarded"
    PARAMETER_LIST
      L_PAREN "("
      PARAMETER
        WORD "f"
        COLON ":"
        TYPE_EXPR
          L_PAREN "("
          R_PAREN ")"
          ARROW "->"
          TYPE_EXPR "int"
            WORD "int"
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        LET_STMT
          KW_LET "let"
          WORD "result"
          EQUALS "="
          CALL_EXPR
            WORD "f"
            CALL_ARGS "()"
              L_PAREN "("
              R_PAREN ")"
        IF_EXPR
          KW_IF "if"
          PAREN_EXPR
            L_PAREN "("
            BINARY_EXPR "result < 0"
              WORD "result"
              LESS "<"
              INTEGER_LITERAL "0"
            R_PAREN ")"
          BLOCK_EXPR
            L_BRACE "{"
            THROW_STMT
              THROW_EXPR
                KW_THROW "throw"
                STRING_LITERAL "negative result"
                  QUOTE """
                  WORD "negative"
                  WORD "result"
                  QUOTE """
            R_BRACE "}"
        WORD "result"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_guarded_pure"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "apply_guarded"
          CALL_ARGS
            L_PAREN "("
            LAMBDA_EXPR
              PARAMETER_LIST "()"
                L_PAREN "("
                R_PAREN ")"
              ARROW "->"
              TYPE_EXPR "int"
                WORD "int"
              BLOCK_EXPR "{ 42 }"
                L_BRACE "{"
                INTEGER_LITERAL "42"
                R_BRACE "}"
            R_PAREN ")"
        R_BRACE "}"
  FUNCTION_DEF
    KW_FUNCTION "function"
    WORD "test_guarded_throwing"
    PARAMETER_LIST "()"
      L_PAREN "("
      R_PAREN ")"
    ARROW "->"
    TYPE_EXPR "int"
      WORD "int"
    EXPR_FUNCTION_BODY
      BLOCK_EXPR
        L_BRACE "{"
        CALL_EXPR
          WORD "apply_guarded"
          CALL_ARGS
            L_PAREN "("
            LAMBDA_EXPR
              PARAMETER_LIST "()"
                L_PAREN "("
                R_PAREN ")"
              ARROW "->"
              TYPE_EXPR "int"
                WORD "int"
              BLOCK_EXPR
                L_BRACE "{"
                THROW_STMT
                  THROW_EXPR "throw 99"
                    KW_THROW "throw"
                    INTEGER_LITERAL "99"
                R_BRACE "}"
            R_PAREN ")"
        R_BRACE "}"

=== ERRORS ===
None
